--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-Dspring.classformat.ignore=true
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/artWeb
+spring.datasource.username=admin
+spring.datasource.password=Galapagar1998
+
+spring.jpa.hibernate.ddl-auto=create
