reestructuring and advancements in the Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/artWeb
-spring.datasource.username=admin
-spring.datasource.password=Galapagar1998
+spring.datasource.url=jdbc:postgresql://localhost:5432/artweb
+spring.datasource.username=postgres
+spring.datasource.password=Galapagar
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
