--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+app.EXPIRATION_TIME=720000
+app.SECRET_KEY=t4FBXD4ioa7eyYxwk351WysPMV2V0JyFXRywDuAx/1U=
