Finished security but with bugs
Why Inserting is not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.password=Galapagar
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
 
 app.EXPIRATION_TIME=720000
 app.SECRET_KEY=t4FBXD4ioa7eyYxwk351WysPMV2V0JyFXRywDuAx/1U=
